* Various fixes to XuggleAudio and XuggleVideo   - Fixed the method that the container was created so that tries to use ffmpeg first before using a Java inputstream. This means it should work with other URI schemes.   - Added a seekToBeginning method that tries various ways to get the container to reset itself.  As containers have different support for this sort of thing, it tries all of them in turn. * Various fixes to VideoDisplay