@@ -34,11 +34,11 @@ package org.openimaj.video.xuggle;
 
 import java.awt.image.BufferedImage;
 import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.RandomAccessFile;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.concurrent.atomic.AtomicReference;
 
@@ -46,6 +46,7 @@ import org.openimaj.image.ImageUtilities;
 import org.openimaj.image.MBFImage;
 import org.openimaj.image.colour.ColourSpace;
 import org.openimaj.video.Video;
+import org.openimaj.video.VideoDisplay;
 import org.openimaj.video.timecode.HrsMinSecFrameTimecode;
 import org.openimaj.video.timecode.VideoTimecode;
 
@@ -67,12 +68,26 @@ import com.xuggle.xuggler.video.ConverterFactory;
 
 /**
  * 	Wraps a Xuggle video reader into the OpenIMAJ {@link Video} interface.
- * 
- * 	This class requires that you have Xuggle already installed on your system.
- * 
- * 	If you have trouble running this within Eclipse you may need to set your
- * 	Eclipse environment to include LD_LIBRARY_PATH (or DYLIB_LIBRARY_PATH on
- * 	Mac) to point to your $XUGGLE_HOME/lib directory.
+ * 	<p>
+ * 	<b>Some Notes:</b>
+ * 	<p>
+ * 	The {@link #hasNextFrame()} method must attempt to read the next packet
+ * 	in the stream to determine if there is a next frame. That means that it
+ * 	incurs a time penalty. It also means there's various logic in that method
+ * 	and the {@link #getNextFrame()} method to avoid reading frames that have
+ * 	already been read. It also means that, to avoid {@link #getCurrentFrame()}
+ * 	incorrectly returning a new frame after {@link #hasNextFrame()} has been
+ * 	called, the class may be holding two frames (the current frame and the next
+ * 	frame) after {@link #hasNextFrame()} has been called.
+ * 	<p>
+ * 	The constructors have signatures that allow the passing of a boolean that
+ * 	determines whether the video is looped or not. This has a different effect
+ * 	than looping using the {@link VideoDisplay}.  When the video is set to loop
+ * 	it will loop indefinitely and the timestamp of frames will be consecutive.
+ * 	That is, when the video loops the timestamps will continue to increase.
+ * 	This is in contrast to setting the {@link VideoDisplay} end action
+ * 	(using {@link VideoDisplay#setEndAction(org.openimaj.video.VideoDisplay.EndAction)}
+ * 	where the looping will reset all timestamps when the video loops.
  * 
  *  @author David Dupplaw (dpd@ecs.soton.ac.uk)
  *  @author Jonathon Hare (jsh2@ecs.soton.ac.uk)
@@ -90,6 +105,9 @@ public class XuggleVideo extends Video<MBFImage>
 
 	/** The current frame - only ever one object that's reused */
 	private MBFImage currentMBFImage;
+	
+	/** Whether the current frame is a key frame or not */
+	private boolean currentFrameIsKeyFrame = false;
 
 	/** The stream index that we'll be reading from */
 	private int streamIndex = -1;
@@ -111,10 +129,22 @@ public class XuggleVideo extends Video<MBFImage>
 
 	/** The timestamp of the frame currently being decoded */
 	private long timestamp;
+	
+	/** The offset to add to all timestamps (used for looping) */
+	private long timestampOffset = 0;
 
 	/** The number of frames per second */
 	private double fps;
+	
+	/** The next frame in the stream */
+	private MBFImage nextFrame = null;
 
+	/** The timestamp of the next frame */
+	public long nextFrameTimestamp = 0;
+
+	/** Whether the next frame is a key frame or not */
+	public boolean nextFrameIsKeyFrame = false;
+	
 	/**
 	 * 	This implements the Xuggle MediaTool listener that will be called
 	 * 	every time a video picture has been decoded from the stream. This class
@@ -136,13 +166,15 @@ public class XuggleVideo extends Video<MBFImage>
 		@Override
 		public void onVideoPicture( final IVideoPictureEvent event )
 		{
-			event.getPicture().getTimeStamp();
+//			event.getPicture().getTimeStamp();
 			if( event.getStreamIndex() == XuggleVideo.this.streamIndex )
 			{
 				XuggleVideo.this.currentMBFImage = ((MBFImageWrapper)event.getImage()).img;
-				XuggleVideo.this.currentFrameUpdated = true;
+				XuggleVideo.this.currentFrameIsKeyFrame = event.getMediaData().isKeyFrame();
 				XuggleVideo.this.timestamp = (long) ((event.getPicture().getTimeStamp()
-						* event.getPicture().getTimeBase().getDouble()) * 1000);
+					* event.getPicture().getTimeBase().getDouble()) * 1000)
+					+ XuggleVideo.this.timestampOffset;
+				XuggleVideo.this.currentFrameUpdated = true;
 			}
 		}
 	}
@@ -172,11 +204,15 @@ public class XuggleVideo extends Video<MBFImage>
 	 *	
 	 *	@created 1 Nov 2011
 	 */
-	protected static final class MBFImageConverter extends BgrConverter {
+	protected static final class MBFImageConverter extends BgrConverter 
+	{
 		private final MBFImageWrapper bimg = new MBFImageWrapper(null);
 		private final byte[] buffer;
 
-		public MBFImageConverter(final IPixelFormat.Type pictureType, final int pictureWidth, final int pictureHeight, final int imageWidth, final int imageHeight) {
+		public MBFImageConverter(
+				final IPixelFormat.Type pictureType, final int pictureWidth, 
+				final int pictureHeight, final int imageWidth, final int imageHeight) 
+		{
 			super(pictureType, pictureWidth, pictureHeight, imageWidth, imageHeight);
 
 			this.bimg.img = new MBFImage(imageWidth, imageHeight, ColourSpace.RGB);
@@ -187,7 +223,7 @@ public class XuggleVideo extends Video<MBFImage>
 		public BufferedImage toImage(IVideoPicture picture) {
 			// test that the picture is valid
 			this.validatePicture(picture);
-
+			
 			// resample as needed
 			IVideoPicture resamplePicture = null;
 			final AtomicReference<JNIReference> ref = new AtomicReference<JNIReference>(null);
@@ -319,30 +355,118 @@ public class XuggleVideo extends Video<MBFImage>
 	@Override
 	public MBFImage getNextFrame()
 	{
+		if( this.nextFrame != null )
+		{
+			// We've already read the next frame, so we simply move on.
+			this.currentMBFImage = this.nextFrame;
+			this.timestamp = this.nextFrameTimestamp;
+			this.currentFrameIsKeyFrame = this.nextFrameIsKeyFrame;
+			this.nextFrame = null;
+		}
+		else
+		{
+			// Read a frame from the stream.
+			this.currentMBFImage = this.readFrame( false );
+		}
+		
+		if( this.currentMBFImage != null )
+		{
+			// Increment frame counter
+			this.currentFrame++;
+//			System.out.println( "Current frame: "+this.currentFrame+" @ "+this.timestamp+
+//				(this.currentFrameIsKeyFrame?" (key frame)":"") );
+		}
+		else
+		{
+//			System.out.println( "No current frame.");
+		}
+
+		return this.currentMBFImage;
+	}
+	
+	/**
+	 * 	Reads a frame from the stream, or returns null if no frame could be
+	 * 	read. If preserveCurrent is true, then the frame is read into
+	 * 	the nextFrame member rather than the currentMBFImage member and the
+	 * 	nextFrame is returned (while currentMBFImage will still contain the
+	 * 	previous frame). Note that if preserveCurrent is true, it will invoke
+	 * 	a copy between images. If preserveCurrent is false and nextFrame is
+	 * 	set, this method may have unexpected results as it does not swap
+	 * 	current and next back. See {@link #getNextFrame()} which swaps back
+	 * 	when a frame has been pre-read from the stream.
+	 * 
+	 * 	@param preserveCurrent Whether to preserve the current frame
+	 *	@return The frame that was read, or NULL if no frame could be read.
+	 */
+	synchronized private MBFImage readFrame( final boolean preserveCurrent )
+	{
+//		System.out.println( "readFrame( "+preserveCurrent+" )");
+		
 		if( this.reader == null ) return null;
 
-		// Read packets until we have a new frame.
-		IError e = null;
-		synchronized( this.reader )
+		// If we need to preserve the current frame, we need to copy the frame
+		// because the readPacket() will cause the frame to be overwritten
+		final long currentTimestamp = this.timestamp;
+		final boolean currentKeyFrameFlag = this.currentFrameIsKeyFrame;
+		if( preserveCurrent && this.nextFrame == null )
 		{
-			while( this.reader != null && (e = this.reader.readPacket()) == null
-					&& !this.currentFrameUpdated );
+			// We make a copy of the current image and set the current image
+			// to point to that (thereby preserving it). We then set the next
+			// frame image to point to the buffer that the readPacket() will fill.
+			if( this.currentMBFImage != null )
+			{
+				final MBFImage tmp = this.currentMBFImage.clone();
+				this.nextFrame = this.currentMBFImage;
+				this.currentMBFImage = tmp;
+			}
 		}
+		// If nextFrame wasn't null, we can just write into it as must be
+		// pointing to the current frame buffer
+		
+		IError e = null;
+		boolean tryAgain = false;
+		do
+		{
+			tryAgain = false;
+			
+			// Read packets until we have a new frame.
+			while( (e = this.reader.readPacket()) == null && !this.currentFrameUpdated );
+
+			if( e != null && e.getType() == IError.Type.ERROR_EOF && this.loop )
+			{
+				// We're looping, so we update the timestamp offset.
+				this.timestampOffset += (this.timestamp - this.timestampOffset);
+				tryAgain = true;
+				this.seekToBeginning();
+			}
+		}
+		while( tryAgain );
 
 		// Check if we're at the end of the file
 		if( !this.currentFrameUpdated || e != null )
 		{
-			System.err.println( "Got video demux error: "+e.getDescription() );
+//			System.err.println( "Got video demux error: "+e.getType() );
 			return null;
 		}
 
 		// We've read a frame so we're done looping
 		this.currentFrameUpdated = false;
 
-		// Increment frame counter
-		this.currentFrame++;
-
-		return this.currentMBFImage;
+		if( preserveCurrent )
+		{
+			// Swap the current values into the next-frame values
+			this.nextFrameIsKeyFrame = this.currentFrameIsKeyFrame;
+			this.currentFrameIsKeyFrame = currentKeyFrameFlag;
+			this.nextFrameTimestamp = this.timestamp;
+			this.timestamp = currentTimestamp;
+			
+			// Return the next frame
+			if( this.nextFrame != null )
+				return this.nextFrame;
+			return this.currentMBFImage;
+		}
+		// Not preserving anything, so just return the frame
+		else	return this.currentMBFImage;
 	}
 
 	/**
@@ -393,7 +517,13 @@ public class XuggleVideo extends Video<MBFImage>
 	@Override
 	public boolean hasNextFrame()
 	{
-		return this.reader.isOpen();
+		if( this.nextFrame == null )
+		{
+			this.nextFrame = this.readFrame( true );
+			return this.nextFrame != null;
+		}
+		else
+			return true;
 	}
 
 	/**
@@ -401,17 +531,70 @@ public class XuggleVideo extends Video<MBFImage>
 	 * 	@see org.openimaj.video.Video#reset()
 	 */
 	@Override
-	public void reset()
+	synchronized public void reset()
 	{
-		if( this.reader != null && this.reader.isOpen() )
-			this.seek(0);
-		else	this.create();
+		if( this.reader == null ) 
+				this.create();
+		else	this.seekToBeginning();			
+	}
+	
+	/**
+	 * 	This is a convenience method that will seek the stream to be the beginning.
+	 * 	As the seek method seems a bit flakey in some codec containers in Xuggle,
+	 * 	we'll try and use a few different methods to get us back to the beginning.
+	 * 	That means that this method may be slower than seek(0) if it needs to
+	 * 	try multiple methods.
+	 */
+	synchronized public void seekToBeginning()
+	{
+		// Try to seek to byte 0. That's the start of the file.
+		this.reader.getContainer().seekKeyFrame( this.streamIndex,
+		        0, 0, 0, IContainer.SEEK_FLAG_BYTE );
+		
+		// Got to the beginning?  We're done.
+		if( this.timestamp == 0 )
+			return;
+		
+		// Try to seek to key frame at timestamp 0.
+		this.reader.getContainer().seekKeyFrame( this.streamIndex,
+		        0, 0, 0, IContainer.SEEK_FLAG_FRAME );
+
+		// Got to the beginning?  We're done.
+		if( this.timestamp == 0 )
+			return;
+
+		// Try to seek backwards to timestamp 0.
+		this.reader.getContainer().seekKeyFrame( this.streamIndex,
+		        0, 0, 0, IContainer.SEEK_FLAG_BACKWARDS );		
+		
+		// Got to the beginning?  We're done.
+		if( this.timestamp == 0 )
+			return;
+
+		// Try to seek to timestamp 0 any way possible.
+		this.reader.getContainer().seekKeyFrame( this.streamIndex,
+		        0, 0, 0, IContainer.SEEK_FLAG_ANY );		
+		
+		// Got to the beginning?  We're done.
+		if( this.timestamp == 0 )
+			return;
+
+		// We're really struggling to get this container back to the start.
+		// So, try recreating the whole reader again.
+		this.reader.close();
+		this.reader = null;
+		this.create();
+		
+		this.getNextFrame();
+		
+		// We tried everything. It's either worked or it hasn't.
+		return;			
 	}
 
 	/**
 	 * 	Create the necessary reader
 	 */
-	private void create()
+	synchronized private void create()
 	{
 		// This converter converts the frames into MBFImages for us
 		ConverterFactory.registerConverter( new ConverterFactory.Type(
@@ -424,32 +607,50 @@ public class XuggleVideo extends Video<MBFImage>
 		// If the reader is already open, we'll close it first and
 		// reinstantiate it.
 		if( this.reader != null && this.reader.isOpen() )
+		{
 			this.reader.close();
+			this.reader = null;
+		}
 
-		// Open the container from an input stream
-		InputStream inputStream = null;
-		final IContainer container = IContainer.make();
+		// Check whether the string we have is a valid URI
+		IContainer container = null;
 		int openResult = 0;
 		try
 		{
-			inputStream = new URL(this.url).openStream();
-			openResult = container.open( inputStream, null, true, true );
+			final URI uri = new URI( this.url );
+
+			// If it's a valid URI, we'll try to open the container using the URI string.
+			container = IContainer.make();
+			openResult = container.open( uri.toString(), 
+					IContainer.Type.READ, null, true, true );
+			
+			// If there was an error trying to open the container in this way,
+			// it may be that we have a resource URL (which ffmpeg doesn't
+			// understand), so we'll try opening an InputStream to the resource.
+			if( openResult < 0 )
+			{
+				System.out.println( "URL "+this.url+" could not be opened by ffmpeg. "+
+						"Trying to open a stream to the URL instead." );
+				final InputStream is = uri.toURL().openStream();
+				openResult = container.open( is, null, true, true );
+				
+				if( openResult < 0 )
+				{
+					System.out.println( "Error opening container. Error "+openResult+
+							" ("+IError.errorNumberToType( openResult ).toString()+")" );
+					return;					
+				}
+			}
+		}
+		catch( final URISyntaxException e2 )
+		{
+			e2.printStackTrace();
+			return;
 		}
 		catch( final MalformedURLException e )
 		{
-			System.out.println( "Maybe not a URL? : '"+this.url+"'");
-			try
-			{
-				openResult = container.open(
-						new RandomAccessFile( this.url, "r" ),
-						IContainer.Type.READ, null );
-			}
-			catch( final FileNotFoundException e1 )
-			{
-				System.out.println( "Nope, not a file either. *shrug*");
-				e1.printStackTrace();
-				return;
-			}
+			e.printStackTrace();
+			return;
 		}
 		catch( final IOException e )
 		{
@@ -457,19 +658,10 @@ public class XuggleVideo extends Video<MBFImage>
 			return;
 		}
 
-		// If the open failed, let's tell someone and quit
-		if( openResult < 0 )
-		{
-			System.out.println( "Error opening container: "+openResult );
-			System.out.println( IError.errorNumberToType( openResult ).toString() );
-			return;
-		}
-
 		// Set up a new reader using the container that reads the images.
 		this.reader = ToolFactory.makeReader( container );
 		this.reader.setBufferedImageTypeToGenerate( BufferedImage.TYPE_3BYTE_BGR );
 		this.reader.addListener( new FrameGetter() );
-		this.reader.setCloseOnEofOnly( !this.loop );
 
 		// Find the video stream.
 		IStream s = null;
@@ -577,39 +769,36 @@ public class XuggleVideo extends Video<MBFImage>
 	 * 	@see org.openimaj.video.Video#seek(double)
 	 */
 	@Override
-	public void seek( final double timestamp )
+	synchronized public void seek( final double timestamp )
 	{
 		// Based on the code of this class: http://www.google.com/codesearch#DzBPmFOZfmA/trunk/0.5/unstable/videoplayer/src/classes/org/jdesktop/wonderland/modules/videoplayer/client/VideoPlayerImpl.java&q=seekKeyFrame%20position&type=cs
 		// using the timebase, calculate the time in timebase units requested
-		synchronized( this.reader )
-		{
-			// Check we've actually got a container
-			if( this.reader == null || this.reader.getContainer() == null ||
-					this.reader.getContainer().getStream(this.streamIndex) == null )
-				this.create();
+		// Check we've actually got a container
+		if( this.reader == null )
+			this.create();
 
-			// Convert between milliseconds and stream timestamps
-			final double timebase = this.reader.getContainer().getStream(
-					this.streamIndex).getTimeBase().getDouble();
-			final long position = (long)(timestamp/timebase);
+		// Convert between milliseconds and stream timestamps
+		final double timebase = this.reader.getContainer().getStream(
+				this.streamIndex).getTimeBase().getDouble();
+		final long position = (long)(timestamp/timebase);
 
-			final long min = position - 100;
-			final long max = position;
+		final long min = Math.max( 0, position - 100 );
+		final long max = position;
 
-			final int ret = this.reader.getContainer().seekKeyFrame( this.streamIndex,
-					min, position, max, 0 );
-			if(ret >= 0)
-			{
+		final int ret = this.reader.getContainer().seekKeyFrame( this.streamIndex,
+				min, position, max, IContainer.SEEK_FLAG_ANY );
+		
+		if(ret >= 0)
 				this.getNextFrame();
-			}
-		}
+		else	System.out.println( "Seek returned an error value: "+ret+": "
+					+IError.errorNumberToType( ret ) );
 	}
 
 	/**
 	 * 	Returns the duration of the video in seconds.
 	 *	@return The duraction of the video in seconds.
 	 */
-	public long getDuration()
+	public synchronized long getDuration()
 	{
 		final long duration = (this.reader.getContainer().
 				getStream(this.streamIndex).getDuration());
